--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@prisma/client": "^5.15.0",
+    "@vercel/postgres": "^0.8.0",
     "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
