--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-currency-input-field": "^3.8.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
