--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "tesseract.js": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
