--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-POSTGRES_PRISMA_URL=="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+POSTGRES_PRISMA_URL="postgresql://abuabdirohman:root@localhost:5415/prj_financial_app?schema=public"
