--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
-NEXT_PUBLIC_API=https://localhost:8000
+# Environment Configuration
+NODE_ENV=development
+
+# Domain Configuration (Change this for production)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# API Configuration (Required for app functionality)
+NEXT_PUBLIC_API=https://docs.google.com/spreadsheets/d
 NEXT_PUBLIC_GOOGLE_SHEET_ID=your_google_sheet_id_here
+
+# Production Example:
+# NODE_ENV=production
+# NEXT_PUBLIC_APP_URL=https://financial.abuabdirohman.com
