--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/build-pwa.js && next build",
+    "build:pwa": "node scripts/build-pwa.js && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -12,6 +13,7 @@
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
