--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,53 @@
 {
   "name": "Better Finance",
-  "short_name": "Finance",
-  "description": "A simple financial app to help you manage your money",
+  "short_name": "Better Finance",
+  "description": "A smart financial app to help you manage your money better",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "background_color": "#f8fafc",
+  "theme_color": "#2563eb",
   "orientation": "portrait-primary",
+  "categories": ["finance", "productivity", "utilities"],
+  "lang": "en",
+  "scope": "/",
   "icons": [
     {
-      "src": "/img/money-bag.png",
+      "src": "/img/logo.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/img/money-bag.png",
+      "src": "/img/logo.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "Transactions",
+      "short_name": "Transactions",
+      "description": "View your transaction history",
+      "url": "/transactions",
+      "icons": [
+        {
+          "src": "/img/logo.svg",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Budgets",
+      "short_name": "Budgets",
+      "description": "Manage your budgets",
+      "url": "/budgets",
+      "icons": [
+        {
+          "src": "/img/logo.svg",
+          "sizes": "96x96"
+        }
+      ]
     }
   ]
 }
