--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f8fafc",
-  "theme_color": "#2563eb",
+  "theme_color": "#1e40af",
   "orientation": "portrait-primary",
   "categories": ["finance", "productivity", "utilities"],
   "lang": "en",
