--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,4 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # API Configuration (Required for app functionality)
 NEXT_PUBLIC_API=https://docs.google.com/spreadsheets/d
 NEXT_PUBLIC_GOOGLE_SHEET_ID=your_google_sheet_id_here
-
-# Production Example:
-# NODE_ENV=production
-# NEXT_PUBLIC_APP_URL=https://financial.abuabdirohman.com
+NEXT_PUBLIC_GOOGLE_APPS_SCRIPT_URL=your_google_apps_script_url_here
