--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-pwa": "^5.6.0",
+    "papaparse": "^5.5.3",
     "react": "^18",
     "react-dom": "^18"
   },
