--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-pwa": "^5.6.0",
     "papaparse": "^5.5.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "eslint": "^8",
