--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "googleapis": "^159.0.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-pwa": "^5.6.0",
