--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "node scripts/build-pwa.js && next build",
     "build:pwa": "node scripts/build-pwa.js && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "axios": "^1.7.2",
@@ -25,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1"
   }
 }
