--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "prj-financial-app",
-    "version": "0.1.0",
+    "name": "better-finance",
+    "version": "1.1.0",
     "private": true,
     "scripts": {
         "dev": "next dev",
