--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,10 +6,11 @@
   "display": "standalone",
   "background_color": "#f8fafc",
   "theme_color": "#1e40af",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "categories": ["finance", "productivity", "utilities"],
   "lang": "en",
   "scope": "/",
+  "display_override": ["window-controls-overlay", "standalone"],
   "icons": [
     {
       "src": "/img/logo.svg",
@@ -25,6 +26,18 @@
     }
   ],
   "shortcuts": [
+    {
+      "name": "Dashboard",
+      "short_name": "Dashboard",
+      "description": "View your financial overview",
+      "url": "/",
+      "icons": [
+        {
+          "src": "/img/logo.svg",
+          "sizes": "96x96"
+        }
+      ]
+    },
     {
       "name": "Transactions",
       "short_name": "Transactions",
@@ -42,6 +55,30 @@
       "short_name": "Budgets",
       "description": "Manage your budgets",
       "url": "/budgets",
+      "icons": [
+        {
+          "src": "/img/logo.svg",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Accounts",
+      "short_name": "Accounts",
+      "description": "Manage your accounts",
+      "url": "/accounts",
+      "icons": [
+        {
+          "src": "/img/logo.svg",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "Assets",
+      "short_name": "Assets",
+      "description": "View your assets",
+      "url": "/assets",
       "icons": [
         {
           "src": "/img/logo.svg",
